# FileDelete

./: README.md  pyproject.toml
src/filedelete/: __init__.py  cli.py  core.py  safety.py  types.py
